definicao das alteracoes

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,3 +1,16 @@
+<!--
+    Adição de funcionalidades na página FAQ
+
+    -Alteração de temas (função, alteração de css)
+    -Todas as perguntas com a resposta oculta
+    basta clicar no + que ela se abrem (if)
+    -Feedback com estrelas das perguntas
+    se for 2 ou menor abrir uma caixa de dialogo
+    perguntanto o por que tão baixa (for each, if)
+
+-->
+
+
 <!DOCTYPE html>
 <html lang="pt-br">
 
