--- a/pages/index.html
+++ b/pages/index.html
@@ -1,5 +1,12 @@
 <!--
--fazer os campeonatos finalizados em até 6 meses
+Criei um site que pega uma API gratuita que trás os campeonatos de futebol
+O código JS está todo comentado para ajudar no entendimento do código
+Neste projeto está contido:
+  -Criação dinamica de elementos com javascript utilizando funções
+  -Mensagem de erro caso não consiga puxar as informações
+  -2 temas para alternar entra (escuro, claro)
+  -Armazenamento do tema escolhido, para manter sempre que o usuário entrar na página
+  -Utilizado estrutura de repetição (ForEach) para acessar os conteudos que a API enviava
 -->
 
 <!DOCTYPE html>
@@ -30,20 +37,15 @@
     </div>
   </header>
 
-  <dialog>
-    <h2>Aviso</h2>
-    <p>A API usada é do plano gratuito, então usar a chave principal pode acarretar na perda de funcionlidades</p>
-    <button>Usar chave de teste</button>
-    <button>Usar chave principal</button>
-    <p>(recomendado)</p>
-  </dialog>
-
   <section>
     <h1 class="leagues-title">Campeonatos em andamento</h1>
     <div class="main-leagues">
       
     </div>
     <h1 class="leagues-title">Campeonatos finalizados</h1>
+    <div class="past-leagues">
+
+    </div>
   </section>
 
 </main>
